@@ -302,6 +302,7 @@ inlead,	   0x50EC10,	0x0,		0x0,		"DiploForm_assemble_tradable_items",		"void (__
 inlead,	   0x437F80,	0x0,		0x0,		"Leader_could_buy_tech_on_trade_screen",	"byte (__fastcall *) (Leader * this, int edx, int tech_id, int from_civ_id)"
 inlead,	   0x4C10B0,	0x0,		0x0,		"City_get_building_defense_bonus",		"int (__fastcall *) (City * this)"
 define,	   0x55A8D0,	0x0,		0x0,		"Leader_count_wonders_with_flag",		"int (__fastcall *) (Leader * this, int edx, enum ImprovementTypeWonderFeatures flag, City * only_in_city)"
+repl vptr, 0x66DD04,	0x68ADE4,	0x66DD04,	"Unit_eval_escort_requirement",			"int (__fastcall *) (Unit * this)"
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
