@@ -87,6 +87,15 @@ fix_ai_army_composition = true
 
 enable_pop_unit_ai = true
 
+; Reduces the maximum number of escorts the AI will assign to its naval transports. In the base game, the AI will assign 1, 2, or 3 escorts depending
+; on the value of the transport and the number of units it's carrying. This setting reduces that upper limit of 3. Specifically:
+;   if set to false or <= 0, no effect
+;   if set to 1, the AI will assign 1 or 2 escorts
+;   if set to 2, the AI will only ever assign 1 escort
+;   if set >= 3, the AI will leave its naval transports unescorted
+; The purpose of reducing this limit is to free up the AI's naval power units for other purposes.
+reduce_max_escorts_per_ai_transport = false
+
 [=================]
 [=== BUG FIXES ===]
 [=================]
